[tool.poetry]
name = "python-program-2"
version = "0.1.0"
description = ""
authors = ["Progrok <Dist812@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_program_2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
